[gd_scene load_steps=2 format=3 uid="uid://cm6at32y0pl8t"]

[ext_resource type="Script" uid="uid://dqvwvtgtgckcu" path="res://GD/MMControl.gd" id="1_brtuo"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brtuo")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.5
offset_top = -248.0
offset_right = 123.5
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 0
text = "Play"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.5
offset_top = -148.0
offset_right = 123.5
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.5
offset_top = -48.0
offset_right = 123.5
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[connection signal="button_up" from="Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
